Closed Bug 345383 Opened 18 years ago Closed 18 years ago

Crash [@ nsMsgCompose::InitEditor]

Categories

(MailNews Core :: Composition, defect)

1.8 Branch
x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.8.1

People

(Reporter: florian, Assigned: florian)

References

Details

(Keywords: crash, fixed1.8.1, verified1.8.1.3)

Crash Data

Attachments

(2 files)

nsMsgCompose::InitEditor uses the m_window variable although it's not sure that it has been initialized (because nsMsgCompose::Initialize can take null as its first parameter). nsMsgCompose::InitEditor has a second argument (nsIDOMWindow* aContentWindow) that isn't used in the function. In an extension that I am developing, this use of the (maybe uninitialized) m_window variable leads to a segfault.
Attached patch patch v1Splinter Review
Attachment #230024 - Flags: review?(mscott)
Assignee: mscott → nobody
Severity: normal → critical
Component: Message Compose Window → MailNews: Composition
Flags: review?(mscott)
Keywords: crash
Product: Thunderbird → Core
QA Contact: message-compose → composition
Summary: Crash (segfault) in nsMsgCompose::InitEditor → Crash [@ nsMsgCompose::InitEditor]
Version: unspecified → 1.8 Branch
Sorry Florian, Bugzilla clobbered your review request when I moved the component. Feel free to re-request.
Attachment #230024 - Flags: superreview?(mscott)
Attachment #230024 - Flags: review?(mscott)
Comment on attachment 230024 [details] [diff] [review] patch v1 this change looks ok to me.
Attachment #230024 - Flags: superreview?(mscott)
Attachment #230024 - Flags: superreview+
Attachment #230024 - Flags: review?(mscott)
Attachment #230024 - Flags: review+
Attachment #230024 - Flags: approval-thunderbird2?
checked in to the trunk
Assignee: nobody → f.qu
Whiteboard: [needs approval]
Comment on attachment 230024 [details] [diff] [review] patch v1 thanks for poking me Adam.
Attachment #230024 - Flags: approval-thunderbird2? → approval-thunderbird2+
Whiteboard: [needs approval] → [checkin needed (1.8 branch)]
Gavin, do you mind landing this on the 1.8.1 branch for tbird?
Attached patch 1.8 branch patchSplinter Review
(In reply to comment #6) > Gavin, do you mind landing this on the 1.8.1 branch for tbird? Not at all, but it doesn't apply cleanly, so I'd like you to verify that this patch is correct (bug 316794 didn't land on the branch).
Attachment #241772 - Flags: review?
Attachment #241772 - Flags: review? → review?(mscott)
Comment on attachment 241772 [details] [diff] [review] 1.8 branch patch thanks for double checking.
Attachment #241772 - Flags: review?(mscott) → review+
mozilla/mailnews/compose/src/nsMsgCompose.cpp 1.460.2.25
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [checkin needed (1.8 branch)]
Target Milestone: --- → mozilla1.8.1
Reporter: Can you kindly help QA verify this bug using the Thunderbird candidate build: ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/2.0.0.0-candidates/. Thanks.
(In reply to comment #10) > Reporter: Can you kindly help QA verify this bug using the Thunderbird > candidate build: > ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/2.0.0.0-candidates/. > Thanks. > It works without crashing in that candidate build.
Status: RESOLVED → VERIFIED
Florian: Thanks for your reply. Based on Comment 11, adding the branch verified keyword.
Keywords: verified1.8.1.3
Product: Core → MailNews Core
Blocks: 468835
Crash Signature: [@ nsMsgCompose::InitEditor]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: