Bug 345383: Crash [@ nsMsgCompose::InitEditor], patch by Florian Quèze <f.qu@queze.net>, r+a=mscott